crates/pgls_pretty_print/tests/snapshots/multi/tests__constraints_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/constraints.sql
---
create table default_tbl (
  i int default 100,
  x text default 'vadim',
  f double precision default 123.456
);

insert into default_tbl values (1, 'thomas', 57.0613);

insert into default_tbl values (1, 'bruce');

insert into default_tbl (i, f) values (2, 987.654);

insert into default_tbl (x) values ('marc');

insert into default_tbl values (3, null, 1.0);

select * from default_tbl;

create sequence default_seq;

create table defaultexpr_tbl (
  i1 int default (100 + (200 - 199) * 2),
  i2 int default nextval('default_seq')
);

insert into defaultexpr_tbl values (-1, -2);

insert into defaultexpr_tbl (i1) values (-3);

insert into defaultexpr_tbl (i2) values (-4);

insert into defaultexpr_tbl (i2) values (null);

select * from defaultexpr_tbl;

create table error_tbl (b1 boolean default (1 in (1, 2)));

drop table error_tbl;

create table check_tbl (
  x int,
  constraint "check_con" check (x > 3)
);

insert into check_tbl values (5);

insert into check_tbl values (4);

insert into check_tbl values (3);

insert into check_tbl values (2);

insert into check_tbl values (6);

insert into check_tbl values (1);

select * from check_tbl;

insert into ne_check_tbl values (5);

insert into ne_check_tbl values (4);

insert into ne_check_tbl values (3);

insert into ne_check_tbl values (2);

insert into ne_check_tbl values (6);

insert into ne_check_tbl values (1);

select * from ne_check_tbl;

create sequence check_seq;

create table check2_tbl (
  x int,
  y text,
  z int,
  constraint "sequence_con" check (x > 3 and y <> 'check failed' and z < 8)
);

insert into check2_tbl values (4, 'check ok', -2);

insert into check2_tbl values (1, 'x check failed', -2);

insert into check2_tbl values (5, 'z check failed', 10);

insert into check2_tbl values (0, 'check failed', -2);

insert into check2_tbl values (6, 'check failed', 11);

insert into check2_tbl values (7, 'check ok', 7);

select * from check2_tbl;

create sequence insert_seq;

insert into insert_tbl (x, z) values (2, -2);

select * from insert_tbl;

select 'one' as one, nextval('insert_seq');

insert into insert_tbl (y) values ('Y');

insert into insert_tbl (y) values ('Y');

insert into insert_tbl (x, z) values (1, -2);

insert into insert_tbl (z, x) values (-7, 7);

insert into insert_tbl values (5, 'check failed', -5);

insert into insert_tbl values (7, '!check failed', -7);

insert into insert_tbl (y) values ('-!NULL-');

select * from insert_tbl;

insert into insert_tbl (y, z) values ('check failed', 4);

insert into insert_tbl (x, y) values (5, 'check failed');

insert into insert_tbl (x, y) values (5, '!check failed');

insert into insert_tbl (y) values ('-!NULL-');

select * from insert_tbl;

select 'seven' as one, nextval('insert_seq');

insert into insert_tbl (y) values ('Y');

select 'eight' as one, currval('insert_seq');

insert into insert_tbl values (null, null, null);

select * from insert_tbl;

create table sys_col_check_tbl (
  city text,
  state text,
  is_capital boolean,
  altitude int,
  check (not (
    is_capital and
    cast(cast(tableoid as regclass) as text) =
    'sys_col_check_tbl'
  ))
);

insert into sys_col_check_tbl values ('Seattle', 'Washington', false, 100);

insert into sys_col_check_tbl values ('Olympia', 'Washington', true, 100);

select *, cast(cast(tableoid as regclass) as text) from sys_col_check_tbl;

drop table sys_col_check_tbl;

create table sys_col_check_tbl (
  city text,
  state text,
  is_capital boolean,
  altitude int,
  check (not (
    is_capital and
    cast(ctid as text) = 'sys_col_check_tbl'
  ))
);

create table insert_child (
  cx int default 42,
  cy int check (cy > x)
)
inherits (insert_tbl);

insert into insert_child (x, z, cy) values (7, -7, 11);

insert into insert_child (x, z, cy) values (7, -7, 6);

insert into insert_child (x, z, cy) values (6, -7, 7);

insert into insert_child (x, y, z, cy) values (6, 'check failed', -6, 7);

select * from insert_child;

drop table insert_child;

create table atacc1 (test int check (test > 0) no inherit);

create table atacc2 (test2 int)
inherits (atacc1);

insert into atacc2 (test) values (-3);

insert into atacc1 (test) values (-3);

drop table atacc1 cascade;

create table atacc1 (
  test int,
  test2 int check (test > 0),
  check (test2 > 10) no inherit
);

create table atacc2 ()
inherits (atacc1);

insert into atacc2 (test) values (-3);

insert into atacc1 (test) values (-3);

insert into atacc2 (test2) values (3);

insert into atacc1 (test2) values (3);

drop table atacc1 cascade;

delete from insert_tbl;

alter sequence insert_seq restart;
